登陆注册页面实现

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,12 @@
 @import "./icon.less";
+
+.app-nav-bar{
+    background-color: #3296fa ;
+    .van-nav-bar__title{
+        color: #fff ;
+    }
+    .van-nav-bar__arrow{
+        color: #fff ;
+    }
+}
+
